--- a/Electron/package.json
+++ b/Electron/package.json
@@ -19,11 +19,12 @@
   "author": "JohnnyVaz",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^3.0.10",
-    "electron-builder": "^20.38.2",
+    "electron": "^3.1.3",
+    "electron-builder": "^20.38.5",
     "electron-winstaller": "^2.7.0"
   },
   "dependencies": {
+    "ajv": "^6.9.1",
     "materialize-css": "^1.0.0",
     "update-electron-app": "^1.3.0"
   },
