--- a/Electron/package.json
+++ b/Electron/package.json
@@ -19,14 +19,14 @@
   "author": "JohnnyVaz",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^3.1.3",
-    "electron-builder": "^20.38.5",
-    "electron-winstaller": "^2.7.0"
+    "electron": "3.1.3",
+    "electron-builder": "20.38.5",
+    "electron-winstaller": "2.7.0"
   },
   "dependencies": {
-    "ajv": "^6.9.1",
-    "materialize-css": "^1.0.0",
-    "update-electron-app": "^1.3.0"
+    "ajv": "6.9.1",
+    "materialize-css": "1.0.0",
+    "update-electron-app": "1.3.0"
   },
   "build": {
     "appId": "JohnnyVazEstDados.id",
