--- a/playground/package.json
+++ b/playground/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "projeto2",
+  "name": "playground",
   "version": "1.0.0",
   "description": "",
-  "main": "src/servidor.js",
+  "main": "main.js",
   "scripts": {
-    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "1.18.2",
-    "express": "4.16.2"
-  },
-  "devDependencies": {
-    "nodemon": "1.14.11"
+    "node-schedule": "^1.3.2"
   }
 }
